# tempRepo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ci.yml
config/: static_analysis.config
config/arxml/: Ecu_Config.arxml  MusicPlayer_ASW.arxml
doc/: architecture.md  examples.md  requirements.md
src/asw/swc_hmi_interface/include/: hmi_controller.hpp  hmi_observer.hpp
src/asw/swc_hmi_interface/src/: hmi_controller.cpp
src/asw/swc_media_source_handler/include/: media_source_strategy.hpp
src/asw/swc_media_source_handler/include/strategies/: bt_source.hpp  usb_source.hpp
src/asw/swc_media_source_handler/src/: media_source_handler.cpp
src/asw/swc_playback_manager/include/: playback_manager.hpp  playback_state_machine.hpp
src/asw/swc_playback_manager/include/states/: pause_state.hpp  play_state.hpp  playback_state.hpp  stop_state.hpp
src/asw/swc_playback_manager/src/: playback_manager.cpp  playback_state_machine.cpp
src/asw/swc_playlist_model/include/: playlist.hpp
src/asw/swc_playlist_model/src/: playlist.cpp
src/bsw/cdd/include/: usb_mass_storage.hpp
src/bsw/cdd/src/: usb_mass_storage.cpp
src/bsw/hal/include/: audio_codec.hpp  can_if.hpp
src/common/include/: app_error_codes.hpp  app_types.hpp  result.hpp  template_helpers.hpp
test/: CMakeLists.txt
test/mocks/bsw_mocks/: mock_audio_codec.hpp
test/mocks/rte_mocks/: mock_rte_musicplayer.hpp
test/unit_tests/asw/: test_media_source_strategy.cpp  test_playback_state_machine.cpp  test_playlist_model.cpp
test/unit_tests/common/: test_error_codes.cpp
